# GoatRX888

./: .gitignore  GAIN_BREAKOUT.txt  Interface.h  README.md  README.md.backup-20260702-094447  SDDC_FX3.img  apply_full_span_clocks.py  apply_integer_n_menus.py  apply_usb2_soapy_switch.py  apply_usb2_switch.py  patch.py  run-2ma-dither-rand-server.sh  run-2ma-dither-server.sh  run-2ma-server.sh  run-dynif-usb2-server.sh  run-gain-breakout-server.sh  run-usb2-server.sh  rx888_adc_dither_default_on.patch  rx888_adc_randomizer_default_on.patch  rx888_agc_retune.patch  rx888_force_usb2.patch  rx888_open_retry.patch  rx888_robustness.patch  rx888_si5351_2ma.patch  rx888_usb2.patch
Core/: CMakeLists.txt  FX3Class.h  RadioHandler.cpp  RadioHandler.h  config.h  fft_mt_r2iq.cpp  fft_mt_r2iq.h  fft_mt_r2iq_impl.hpp
Core/arch/linux/: FX3handler.cpp  FX3handler.h  streaming.c  usb_device.c  usb_device.h  usb_device_internals.h
Core/radio/: RX888R2Radio.cpp
SDDC_FX3/: DebugConsole.c  StartStopApplication.c  USBhandler.c  makefile
SDDC_FX3/driver/: Si5351.c  tuner_r82xx.c
SoapySDDC/: Registration.cpp  Settings.cpp  SoapySDDC.hpp  Streaming.cpp
firmware/: SDDC_FX3_usb3.img
